# agents-sdk-mini-projects

./: LICENSE  README.md
assistant/: README.md  main.py  pyproject.toml
fast_assistant/: README.md  main.py  pyproject.toml
first_agent/: README.md  main.py  pyproject.toml
gemini_assistant/: README.md  main.py  pyproject.toml
hello_agent/: pyproject.toml
helpful_assistant/: .example.env  main.py  pyproject.toml
local_assistant/: .env.example  .gitignore  README.md  main.py  pyproject.toml
panaversity_support_agent/: .env.example  .gitignore  main.py  pyproject.toml
time_agent/: main.py  pyproject.toml
