[project]
name = "hello-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sheikh Mohammad Ahmed", email = "sheikhmohammadahmed07@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
hello-agent = "hello_agent:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
